update vimrc and tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,36 +4,24 @@ set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-# Remaps prefix key from Ctrl-b to  (back-tick key)
-#unbind C-b
-#set -g prefix (replace with back-tick)
-#bind (replace with back-tick) send-prefix
-
-# Sets key actions to be like Vi (replace 'vi' with 'emacs' for Emacs key actions)
-#set -g status-keys vi
-setw -g mode-keys vi 
-
-# switch panes using Alt-key without prefix; uses same keys as in Vim
-bind -n M-h select-pane -L
-bind -n M-l select-pane -R
-bind -n M-k select-pane -U
-bind -n M-j select-pane -D
-
 # Enable mouse control (clickable windows, panes, resizable panes)
-#set -g mouse-select-window on
-#set -g mouse-select-pane on
-#set -g mouse-resize-pane on
-# Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
 
 # Changes pane border colors to make active pane easier to see
-set-option -g pane-border-fg blue
-set-option -g pane-active-border-fg brightyellow
-set-option -g pane-active-border-bg default 
+set -g pane-border-style fg=blue
+set -g pane-active-border-style fg=brightyellow
 
-# Allows efficient copying from one pane and pasting to the pane to its right
-# With vim mode enabled for Tmux copy mode, M-Space Space starts copy text selection at cursor
-bind -n M-Space copy-mode
-# With vim mode enabled for Tmux copy mode, Enter M-Enter ends copy text selection at cursor and pastes it into pane to the right
-bind -n M-Enter select-pane -R \; paste-buffer
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# https://github.com/tmux-plugins/tpm
+#
+# install tpm with:
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+#
+# after adding plugin with "set -g @plugin" (as above), load plugin with:
+# Prefix + I (capital 'I', which stands for "Install")
+#
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
