add neovim plugins & kitty border

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,10 +8,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monospace
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+font_family      Hack Regular
+bold_font        Hack Bold
+italic_font      Hack Italic
+bold_italic_font Hack Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -320,7 +320,7 @@ font_size 9.0
 #: resizing windows. The cells value is used for horizontal resizing
 #: and the lines value for vertical resizing.
 
-# window_border_width 1.0
+window_border_width 1.0
 
 #: The width (in pts) of window borders. Will be rounded to the
 #: nearest number of pixels based on screen resolution. Note that
@@ -359,12 +359,12 @@ font_size 9.0
 #: placed centrally. A value of top-left means the padding will be on
 #: only the bottom and right edges.
 
-# active_border_color #00ff00
+active_border_color #00ff00
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
 
-# inactive_border_color #cccccc
+inactive_border_color #cccccc
 
 #: The color for the border of inactive windows
 
@@ -689,7 +689,7 @@ background #000000
 #: Disable this if you want kitty top-level (OS) windows to not be
 #: resizable on macOS.
 
-# macos_thicken_font 0
+macos_thicken_font 0.60
 
 #: Draw an extra border around the font with the given width, to
 #: increase legibility at small font sizes. For example, a value of
